Bug 1339775 - Add role="checkbox" for specially styled in-content checkboxes. r=jaws
MozReview-Commit-ID: IZhRECggz4j

UltraBlame original commit: 3be6c2cbcf85f76314e3ee9f9ccf9e35bf5242b2

--- a/toolkit/components/aboutperformance/content/aboutPerformance.xhtml
+++ b/toolkit/components/aboutperformance/content/aboutPerformance.xhtml
@@ -1259,6 +1259,11 @@ display
 -
 recent
 "
+role
+=
+"
+checkbox
+"
 >
 <
 /
@@ -1332,6 +1337,11 @@ id
 check
 -
 autorefresh
+"
+role
+=
+"
+checkbox
 "
 >
 <
