Bug 1333482 part 7 - [css-ui] Amend DevTools themes with 'appearance:none' where needed so that they'll work with the pref on/off.  r=dholbert
MozReview-Commit-ID: DCSg7qlyyJa

UltraBlame original commit: 4f3bd2974af3969e0a343c587534074c2c7c575a

--- a/devtools/client/themes/commandline.inc.css
+++ b/devtools/client/themes/commandline.inc.css
@@ -668,6 +668,10 @@ appearance
 :
 none
 ;
+appearance
+:
+none
+;
 padding
 :
 0
@@ -721,6 +725,10 @@ toolbarbutton
 -
 moz
 -
+appearance
+:
+none
+;
 appearance
 :
 none
@@ -1286,6 +1294,10 @@ appearance
 :
 none
 ;
+appearance
+:
+none
+;
 }
 .
 gclitoolbar
@@ -1372,6 +1384,10 @@ node
 -
 moz
 -
+appearance
+:
+none
+;
 appearance
 :
 none
