--- a/devtools/client/themes/common.css
+++ b/devtools/client/themes/common.css
@@ -449,6 +449,12 @@ none
 !
 important
 ;
+appearance
+:
+none
+!
+important
+;
 background
 -
 color
@@ -1668,6 +1674,10 @@ button
 -
 moz
 -
+appearance
+:
+none
+;
 appearance
 :
 none
@@ -2922,6 +2932,10 @@ filterinput
 -
 moz
 -
+appearance
+:
+none
+;
 appearance
 :
 none
