--- a/devtools/client/themes/responsivedesign.inc.css
+++ b/devtools/client/themes/responsivedesign.inc.css
@@ -118,6 +118,10 @@ appearance
 :
 none
 ;
+appearance
+:
+none
+;
 background
 :
 transparent
@@ -189,6 +193,10 @@ textinput
 -
 moz
 -
+appearance
+:
+none
+;
 appearance
 :
 none
@@ -276,6 +284,10 @@ toolbarbutton
 -
 moz
 -
+appearance
+:
+none
+;
 appearance
 :
 none
@@ -449,6 +461,10 @@ appearance
 :
 none
 ;
+appearance
+:
+none
+;
 background
 -
 color
@@ -475,6 +491,10 @@ input
 -
 moz
 -
+appearance
+:
+none
+;
 appearance
 :
 none
@@ -1023,6 +1043,10 @@ appearance
 :
 none
 ;
+appearance
+:
+none
+;
 display
 :
 -
@@ -1107,6 +1131,10 @@ button
 -
 moz
 -
+appearance
+:
+none
+;
 appearance
 :
 none
@@ -1310,6 +1338,12 @@ dropmarker
 -
 moz
 -
+appearance
+:
+none
+!
+important
+;
 appearance
 :
 none
@@ -2220,6 +2254,10 @@ appearance
 :
 none
 ;
+appearance
+:
+none
+;
 padding
 :
 20px
@@ -2383,6 +2421,10 @@ ignore
 -
 moz
 -
+appearance
+:
+none
+;
 appearance
 :
 none
@@ -2562,6 +2604,10 @@ ignore
 -
 moz
 -
+appearance
+:
+none
+;
 appearance
 :
 none
