--- a/devtools/client/themes/toolbars.css
+++ b/devtools/client/themes/toolbars.css
@@ -546,6 +546,10 @@ appearance
 :
 none
 ;
+appearance
+:
+none
+;
 padding
 :
 0
@@ -828,6 +832,10 @@ appearance
 :
 none
 ;
+appearance
+:
+none
+;
 margin
 :
 0
@@ -850,6 +858,10 @@ tabpanels
 -
 moz
 -
+appearance
+:
+none
+;
 appearance
 :
 none
@@ -944,6 +956,10 @@ alltabs
 -
 moz
 -
+appearance
+:
+none
+;
 appearance
 :
 none
@@ -1052,6 +1068,10 @@ tab
 -
 moz
 -
+appearance
+:
+none
+;
 appearance
 :
 none
