Bug 1322570 Part 2 - Resolve {align,justify}-self using StyleContext from alignment container frame in ReflowInput::InitConstraints(). r=dholbert
Per bug 1322570 comment 46, it's not easy to replace ComputedJustifyItems()
and UsedJustifySelf()'s internal nsStyleContext::GetParent() without
correctness penalty, so we use GetParentAllowServo() for now.

Also, fix the reftest.list added in bug 1334403 which incorrectly wrote test
page as reference page.

MozReview-Commit-ID: 6kAAWSFojd5

UltraBlame original commit: 67c909cb9dabc956af3df2f59df11eb1687859d2

--- a/layout/reftests/css-grid/grid-item-table-stretch-002-ref.html
+++ b/layout/reftests/css-grid/grid-item-table-stretch-002-ref.html
@@ -221,6 +221,25 @@ dashed
 blue
 ;
 }
+caption
+{
+justify
+-
+self
+:
+stretch
+;
+}
+/
+*
+XXX
+:
+Workaround
+bug
+1350037
+.
+*
+/
 x
 {
 display
