Bug 1348442: Part 2a - Asynchronously load and cache content script CSS. r=aswan
MozReview-Commit-ID: 1BzLNbdXMfU

UltraBlame original commit: 0b89dcab1adaaf2fdd7a4d1d3a83c0ca58620e5e

--- a/toolkit/components/extensions/test/mochitest/test_ext_contentscript_css.html
+++ b/toolkit/components/extensions/test/mochitest/test_ext_contentscript_css.html
@@ -169,6 +169,27 @@ use
 strict
 "
 ;
+function
+delay
+(
+ms
+)
+{
+return
+new
+Promise
+(
+resolve
+=
+>
+setTimeout
+(
+resolve
+ms
+)
+)
+;
+}
 add_task
 (
 function
@@ -282,6 +303,24 @@ win
 ;
 let
 style
+;
+for
+(
+let
+i
+=
+0
+;
+i
+<
+1000
+;
+i
++
++
+)
+{
+style
 =
 win
 .
@@ -294,6 +333,28 @@ document
 body
 )
 ;
+if
+(
+style
+.
+maxWidth
+=
+=
+"
+42px
+"
+)
+{
+break
+;
+}
+yield
+delay
+(
+0
+)
+;
+}
 is
 (
 style
