Bug 1348573 - Fix button text color in focused / active / checked states with High Contrast black and High Contrast white themes. r=Gijs
MozReview-Commit-ID: BwEnPur1AJ5

UltraBlame original commit: e6405802bfc0881d8cf36e250eaca1732b25ece2

--- a/toolkit/themes/windows/global/button.css
+++ b/toolkit/themes/windows/global/button.css
@@ -406,6 +406,10 @@ ThreeDDarkShadow
 .
 .
 default
+/
+hover
+/
+focused
 state
 .
 .
@@ -451,15 +455,77 @@ for
 high
 -
 contrast
+black
+and
+white
 themes
 on
 Windows
 8
 and
 later
+where
+the
+native
+appearance
+renders
+a
+different
+background
+(
+which
+appears
+to
+be
+equivalent
+to
+the
+Highlight
+color
+)
+if
+the
+button
+is
+in
+the
+default
+hovered
+or
+focused
+state
+.
+However
+if
+these
+states
+overlap
+with
+the
+active
+disabled
+open
+or
+checked
+state
+the
+appearance
+reverts
+back
+to
+the
+default
+background
+.
 *
 /
 button
+:
+-
+moz
+-
+any
+(
 [
 default
 =
@@ -467,9 +533,45 @@ default
 true
 "
 ]
-button
 :
 hover
+:
+focus
+)
+:
+not
+(
+:
+-
+moz
+-
+any
+(
+:
+active
+[
+disabled
+=
+"
+true
+"
+]
+[
+open
+=
+"
+true
+"
+]
+[
+checked
+=
+"
+true
+"
+]
+)
+)
 {
 color
 :
