Backed out changeset e1ce569804cb (bug 1347111) for failing browser_all_files_referenced.js on Windows. r=backout
UltraBlame original commit: eb91648b0991d96140e7304a0bba45dd0e271595

--- a/toolkit/themes/windows/global/checkbox.css
+++ b/toolkit/themes/windows/global/checkbox.css
@@ -383,6 +383,30 @@ disabled
 true
 "
 ]
+>
+.
+checkbox
+-
+check
+{
+background
+-
+color
+:
+-
+moz
+-
+Dialog
+;
+}
+checkbox
+[
+disabled
+=
+"
+true
+"
+]
 {
 color
 :
@@ -460,6 +484,59 @@ align
 :
 center
 ;
+border
+:
+2px
+solid
+;
+-
+moz
+-
+border
+-
+top
+-
+colors
+:
+ThreeDShadow
+ThreeDDarkShadow
+;
+-
+moz
+-
+border
+-
+right
+-
+colors
+:
+ThreeDHighlight
+ThreeDLightShadow
+;
+-
+moz
+-
+border
+-
+bottom
+-
+colors
+:
+ThreeDHighlight
+ThreeDLightShadow
+;
+-
+moz
+-
+border
+-
+left
+-
+colors
+:
+ThreeDShadow
+ThreeDDarkShadow
+;
 min
 -
 width
@@ -472,6 +549,20 @@ height
 :
 13px
 ;
+background
+:
+-
+moz
+-
+Field
+no
+-
+repeat
+50
+%
+50
+%
+;
 margin
 -
 inline
@@ -480,4 +571,131 @@ end
 :
 3px
 ;
+}
+checkbox
+:
+hover
+:
+active
+>
+.
+checkbox
+-
+check
+{
+background
+-
+color
+:
+-
+moz
+-
+Dialog
+;
+}
+/
+*
+.
+.
+.
+.
+.
+checked
+state
+.
+.
+.
+.
+.
+*
+/
+checkbox
+[
+checked
+=
+"
+true
+"
+]
+>
+.
+checkbox
+-
+check
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+checkbox
+/
+cbox
+-
+check
+.
+gif
+"
+)
+;
+}
+checkbox
+[
+checked
+=
+"
+true
+"
+]
+[
+disabled
+=
+"
+true
+"
+]
+>
+.
+checkbox
+-
+check
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+checkbox
+/
+cbox
+-
+check
+-
+dis
+.
+gif
+"
+)
+!
+important
 }
