Bug 1328868 - Part 10 - Make about:config handle text zoom changes a bit more gracefully. r=sebastian
This means scaling the the size of the images used for buttons and making sure that at large magnifications, the toolbar's text input properly moves into its own line instead of simply overlapping the preference immediately below. We also want to make sure that the text on any buttons remains vertically centred.

MozReview-Commit-ID: 7rUf1tucAzL

UltraBlame original commit: 1c0b16d1747c0964577a8ec21fa2b0a17b44ea4e

--- a/mobile/android/themes/core/config.css
+++ b/mobile/android/themes/core/config.css
@@ -115,13 +115,21 @@ width
 100
 %
 ;
+min
+-
 height
 :
 3em
 ;
+display
+:
+flow
+-
+root
+;
 position
 :
-fixed
+sticky
 ;
 top
 :
@@ -220,7 +228,7 @@ margin
 :
 0
 .
-5em
+375em
 ;
 height
 :
@@ -468,16 +476,16 @@ background
 -
 size
 :
-48px
-48px
+3em
+3em
 ;
 height
 :
-48px
+3em
 ;
 width
 :
-48px
+3em
 ;
 display
 :
@@ -549,16 +557,16 @@ background
 -
 size
 :
-32px
-32px
+2em
+2em
 ;
 height
 :
-32px
+2em
 ;
 width
 :
-32px
+2em
 ;
 display
 :
@@ -613,16 +621,16 @@ background
 -
 size
 :
-32px
-32px
+2em
+2em
 ;
 height
 :
-32px
+2em
 ;
 width
 :
-32px
+2em
 ;
 display
 :
@@ -710,12 +718,6 @@ margin
 right
 :
 auto
-;
-padding
--
-top
-:
-3em
 ;
 padding
 -
@@ -1525,7 +1527,7 @@ display
 :
 inline
 -
-block
+flex
 ;
 box
 -
@@ -1534,6 +1536,12 @@ sizing
 border
 -
 box
+;
+align
+-
+items
+:
+center
 ;
 text
 -
@@ -1724,6 +1732,13 @@ png
 ;
 background
 -
+size
+:
+1em
+1em
+;
+background
+-
 position
 :
 center
@@ -1769,6 +1784,13 @@ arrowdown
 png
 "
 )
+;
+background
+-
+size
+:
+1em
+1em
 ;
 background
 -
