Bug 759252 - Use CSS animations for the loading and connecting throbbers. r=jaws
MozReview-Commit-ID: 8X4uOrxvF4c

UltraBlame original commit: 76ad1c764e5c626b20b87099fe9b822e21dc23e9

--- a/browser/themes/shared/tabs.inc.css
+++ b/browser/themes/shared/tabs.inc.css
@@ -1557,6 +1557,42 @@ blocked
 )
 ;
 }
+keyframes
+tab
+-
+throbber
+-
+loading
+{
+to
+{
+transform
+:
+rotate
+(
+360deg
+)
+;
+}
+}
+keyframes
+tab
+-
+throbber
+-
+connecting
+{
+from
+{
+transform
+:
+rotate
+(
+360deg
+)
+;
+}
+}
 .
 tab
 -
@@ -1586,9 +1622,60 @@ tabbrowser
 /
 connecting
 .
-png
+svg
 "
 )
+;
+animation
+-
+duration
+:
+960ms
+;
+animation
+-
+iteration
+-
+count
+:
+infinite
+;
+animation
+-
+name
+:
+tab
+-
+throbber
+-
+connecting
+;
+animation
+-
+timing
+-
+function
+:
+linear
+;
+/
+*
+uncomment
+after
+bug
+1350010
+:
+context
+-
+properties
+:
+fill
+;
+*
+/
+fill
+:
+currentColor
 ;
 }
 .
@@ -1612,17 +1699,33 @@ chrome
 :
 /
 /
-global
+browser
 /
 skin
 /
-icons
+tabbrowser
 /
 loading
 .
-png
+svg
 "
 )
+;
+animation
+-
+duration
+:
+800ms
+;
+animation
+-
+name
+:
+tab
+-
+throbber
+-
+loading
 ;
 }
 .
@@ -5680,41 +5783,6 @@ image
 .
 tab
 -
-throbber
-[
-busy
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-tabbrowser
-/
-connecting
-2x
-.
-png
-"
-)
-;
-}
-.
-tab
--
 icon
 -
 image
@@ -5739,41 +5807,6 @@ skin
 places
 /
 defaultFavicon
-2x
-.
-png
-"
-)
-;
-}
-.
-tab
--
-throbber
-[
-progress
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-loading
 2x
 .
 png
