Bug 1350881 - Clean up button styling for Windows Classic. r=johannh
MozReview-Commit-ID: DxOywklmTVU

UltraBlame original commit: 1df150b82bbd15cadd2e36129f753f7da072f78c

--- a/toolkit/themes/windows/global/button.css
+++ b/toolkit/themes/windows/global/button.css
@@ -269,7 +269,6 @@ margin
 1px
 5px
 2px
-5px
 ;
 min
 -
@@ -610,29 +609,27 @@ state
 .
 *
 /
-button
-:
-hover
-:
-active
->
-.
-button
--
-box
-:
+media
+(
 -
 moz
 -
-system
--
-metric
-(
 windows
 -
 classic
 )
+{
 button
+:
+-
+moz
+-
+any
+(
+:
+hover
+:
+active
 [
 open
 =
@@ -640,24 +637,6 @@ open
 true
 "
 ]
->
-.
-button
--
-box
-:
--
-moz
--
-system
--
-metric
-(
-windows
--
-classic
-)
-button
 [
 checked
 =
@@ -665,23 +644,23 @@ checked
 true
 "
 ]
+)
+:
+not
+(
+[
+disabled
+=
+"
+true
+"
+]
+)
 >
 .
 button
 -
 box
-:
--
-moz
--
-system
--
-metric
-(
-windows
--
-classic
-)
 {
 padding
 -
@@ -711,6 +690,7 @@ end
 :
 3px
 ;
+}
 }
 /
 *
@@ -752,6 +732,16 @@ color
 GrayText
 ;
 }
+media
+(
+-
+moz
+-
+windows
+-
+classic
+)
+{
 button
 [
 disabled
@@ -760,18 +750,6 @@ disabled
 true
 "
 ]
-:
--
-moz
--
-system
--
-metric
-(
-windows
--
-classic
-)
 {
 color
 :
@@ -786,56 +764,6 @@ shadow
 ThreeDHighlight
 ;
 }
-button
-[
-disabled
-=
-"
-true
-"
-]
->
-.
-button
--
-box
-{
-padding
--
-top
-:
-1px
-!
-important
-;
-padding
--
-bottom
-:
-2px
-!
-important
-;
-padding
--
-inline
--
-start
-:
-3px
-!
-important
-;
-padding
--
-inline
--
-end
-:
-4px
-!
-important
-;
 }
 /
 *
