Bug 1719727 - Change "Personalize" on New Tab to gear icon. r=prathiksha,fluent-reviewers,Gijs,thecount
Differential Revision: https://phabricator.services.mozilla.com/D119657

UltraBlame original commit: 225f9de7bf4e7818dd01e06bbcad67400a89a2fb

--- a/browser/components/newtab/content-src/components/CustomizeMenu/_CustomizeMenu.scss
+++ b/browser/components/newtab/content-src/components/CustomizeMenu/_CustomizeMenu.scss
@@ -73,18 +73,6 @@ personalize
 -
 button
 {
-font
--
-size
-:
-12px
-;
-font
--
-weight
-:
-600
-;
 border
 :
 0
@@ -99,46 +87,11 @@ background
 -
 color
 :
-var
-(
--
--
-newtab
--
-background
--
-button
--
-color
-)
-;
-color
-:
-var
-(
--
--
-newtab
--
-background
--
-button
--
-text
--
-color
-)
+transparent
 ;
 padding
 :
-3px
-10px
-;
-min
--
-height
-:
-32px
+15px
 ;
 &
 :
