--- a/browser/components/newtab/css/activity-stream-windows.css
+++ b/browser/components/newtab/css/activity-stream-windows.css
@@ -453,41 +453,6 @@ background
 -
 button
 -
-color
-:
-rgba
-(
-223
-223
-223
-0
-.
-5
-)
-;
--
--
-newtab
--
-background
--
-button
--
-text
--
-color
-:
-#
-484848
-;
--
--
-newtab
--
-background
--
-button
--
 hover
 -
 color
@@ -1730,41 +1695,6 @@ rgba
 .
 3
 )
-;
--
--
-newtab
--
-background
--
-button
--
-color
-:
-rgba
-(
-80
-80
-80
-0
-.
-5
-)
-;
--
--
-newtab
--
-background
--
-button
--
-text
--
-color
-:
-#
-CDCDD4
 ;
 -
 -
@@ -16767,18 +16697,6 @@ personalize
 -
 button
 {
-font
--
-size
-:
-12px
-;
-font
--
-weight
-:
-600
-;
 border
 :
 0
@@ -16793,46 +16711,11 @@ background
 -
 color
 :
-var
-(
--
--
-newtab
--
-background
--
-button
--
-color
-)
-;
-color
-:
-var
-(
--
--
-newtab
--
-background
--
-button
--
-text
--
-color
-)
+transparent
 ;
 padding
 :
-3px
-10px
-;
-min
--
-height
-:
-32px
+15px
 ;
 }
 .
