Bug 1710934 - Hotfix - Re-enable urlbar-input:not(:focus) rule. r=dao
Looks like I disabled this rule at some point during testing and a rebase issue drew it into the final patch.

Differential Revision: https://phabricator.services.mozilla.com/D120114

UltraBlame original commit: 660fd0b1b386014dbaa409ac82fe7b907207bd27

--- a/browser/themes/shared/urlbar-searchbar.inc.css
+++ b/browser/themes/shared/urlbar-searchbar.inc.css
@@ -1386,8 +1386,6 @@ light
 )
 ;
 }
-/
-*
 #
 urlbar
 -
@@ -1431,6 +1429,17 @@ background
 -
 color
 :
+var
+(
+-
+-
+lwt
+-
+toolbar
+-
+field
+-
+highlight
 -
 moz
 -
@@ -1447,10 +1456,9 @@ background
 disabled
 light
 )
+)
 ;
 }
-*
-/
 :
 root
 [
