Bug 1720534 - Clean up styles in Bookmarks Menu Button menupopups on Windows 7 and 10. r=desktop-theme-reviewers,dao
This also gets rid of a dead CSS class (panel-subview-footer).

Differential Revision: https://phabricator.services.mozilla.com/D119906

UltraBlame original commit: cc4e5ea0c9863a8c4f65a49cd51852f7f38dd2fe

--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -2065,83 +2065,6 @@ flex
 ;
 }
 .
-subviewbutton
-.
-panel
--
-subview
--
-footer
-{
-box
--
-sizing
-:
-border
--
-box
-;
-min
--
-height
-:
-41px
-;
-}
-.
-cui
--
-widget
--
-panelview
-menuitem
-.
-subviewbutton
-.
-panel
--
-subview
--
-footer
-{
-margin
-:
-4px
-0
-0
-;
-}
-.
-cui
--
-widget
--
-panelview
-.
-subviewbutton
-.
-panel
--
-subview
--
-footer
->
-.
-menu
--
-text
-{
--
-moz
--
-box
--
-flex
-:
-1
-;
-}
-.
 panel
 -
 info
@@ -3371,8 +3294,18 @@ arrowpanel
 -
 padding
 :
-4px
-0
+var
+(
+-
+-
+panel
+-
+subview
+-
+body
+-
+padding
+)
 ;
 }
 #
@@ -3487,32 +3420,6 @@ menuPanelWidth
 +
 32px
 )
-;
-}
-.
-cui
--
-widget
--
-panel
-.
-cui
--
-widget
--
-panelWithFooter
-:
-:
-part
-(
-content
-)
-{
-padding
--
-bottom
-:
-0
 ;
 }
 .
@@ -9379,12 +9286,6 @@ bottom
 }
 .
 subviewbutton
-.
-panel
--
-subview
--
-footer
 >
 .
 menu
@@ -9416,71 +9317,6 @@ on
 Windows
 *
 /
-padding
--
-inline
--
-end
-:
-6px
-;
--
-moz
--
-box
--
-flex
-:
-0
-;
-}
-.
-subviewbutton
-.
-panel
--
-subview
--
-footer
->
-.
-toolbarbutton
--
-text
-{
-padding
--
-inline
--
-start
-:
-0
-;
-}
-.
-subviewbutton
-.
-panel
--
-subview
--
-footer
->
-.
-menu
--
-accel
--
-container
-{
-padding
--
-inline
--
-start
-:
-6px
-;
 }
 .
 subviewbutton
@@ -9534,6 +9370,19 @@ on
 Windows
 *
 /
+color
+:
+var
+(
+-
+-
+panel
+-
+shortcut
+-
+color
+)
+;
 }
 .
 subviewbutton
@@ -11066,145 +10915,6 @@ arrowpanel
 -
 color
 )
-;
-}
-.
-subviewbutton
-.
-panel
--
-subview
--
-footer
-{
-margin
-:
-0
-;
-background
--
-color
-:
-var
-(
--
--
-arrowpanel
--
-dimmed
-)
-;
-border
--
-top
-:
-1px
-solid
-var
-(
--
--
-panel
--
-separator
--
-color
-)
-;
-border
--
-radius
-:
-0
-;
-}
-menuitem
-.
-panel
--
-subview
--
-footer
-menuStateHover
-.
-subviewbutton
-.
-panel
--
-subview
--
-footer
-buttonStateHoverOrFocus
-{
-background
--
-color
-:
-var
-(
--
--
-arrowpanel
--
-dimmed
--
-further
-)
-;
-}
-menuitem
-.
-panel
--
-subview
--
-footer
-menuStateActive
-.
-subviewbutton
-.
-panel
--
-subview
--
-footer
-buttonStateActive
-{
-background
--
-color
-:
-var
-(
--
--
-arrowpanel
--
-dimmed
--
-even
--
-further
-)
-;
-box
--
-shadow
-:
-0
-1px
-0
-hsla
-(
-210
-4
-%
-10
-%
-.
-05
-)
-inset
 ;
 }
 #
