--- a/toolkit/themes/shared/findbar.css
+++ b/toolkit/themes/shared/findbar.css
@@ -616,6 +616,323 @@ input
 findbar
 -
 textbox
+:
+-
+moz
+-
+lwtheme
+:
+:
+selection
+{
+background
+-
+color
+:
+var
+(
+-
+-
+lwt
+-
+toolbar
+-
+field
+-
+highlight
+-
+moz
+-
+system
+-
+color
+(
+text
+-
+select
+-
+background
+light
+)
+)
+;
+color
+:
+var
+(
+-
+-
+lwt
+-
+toolbar
+-
+field
+-
+highlight
+-
+text
+-
+moz
+-
+system
+-
+color
+(
+text
+-
+select
+-
+foreground
+light
+)
+)
+;
+}
+html
+|
+input
+.
+findbar
+-
+textbox
+:
+not
+(
+:
+focus
+)
+:
+-
+moz
+-
+lwtheme
+:
+:
+selection
+{
+background
+-
+color
+:
+var
+(
+-
+-
+lwt
+-
+toolbar
+-
+field
+-
+highlight
+-
+moz
+-
+system
+-
+color
+(
+text
+-
+select
+-
+background
+-
+disabled
+light
+)
+)
+;
+}
+:
+root
+[
+lwt
+-
+toolbar
+-
+field
+-
+focus
+-
+brighttext
+]
+html
+|
+input
+.
+findbar
+-
+textbox
+:
+focus
+:
+:
+selection
+{
+background
+-
+color
+:
+var
+(
+-
+-
+lwt
+-
+toolbar
+-
+field
+-
+highlight
+-
+moz
+-
+system
+-
+color
+(
+text
+-
+select
+-
+background
+dark
+)
+)
+;
+color
+:
+var
+(
+-
+-
+lwt
+-
+toolbar
+-
+field
+-
+highlight
+-
+text
+-
+moz
+-
+system
+-
+color
+(
+text
+-
+select
+-
+foreground
+dark
+)
+)
+;
+}
+:
+root
+[
+lwt
+-
+toolbar
+-
+field
+-
+brighttext
+]
+html
+|
+input
+.
+findbar
+-
+textbox
+:
+not
+(
+:
+focus
+)
+:
+:
+selection
+{
+background
+-
+color
+:
+var
+(
+-
+-
+lwt
+-
+toolbar
+-
+field
+-
+highlight
+-
+moz
+-
+system
+-
+color
+(
+text
+-
+select
+-
+background
+-
+disabled
+dark
+)
+)
+;
+color
+:
+var
+(
+-
+-
+lwt
+-
+toolbar
+-
+field
+-
+highlight
+-
+text
+-
+moz
+-
+system
+-
+color
+(
+text
+-
+select
+-
+foreground
+dark
+)
+)
+;
+}
+html
+|
+input
+.
+findbar
+-
+textbox
 [
 status
 =
