Bug 1720703 - Sync the list of hidden elements with the HTML spec. r=annevk
`<source>` and `<track>` were missing, and the order is tweaked to match the HTML spec.

Differential Revision: https://phabricator.services.mozilla.com/D120206

UltraBlame original commit: 7a6b0696b90cdf48a4f19d7d997e4bbac79d1160

--- a/layout/style/res/html.css
+++ b/layout/style/res/html.css
@@ -3891,13 +3891,6 @@ none
 important
 ;
 }
-link
-{
-display
-:
-none
-;
-}
 frame
 {
 border
@@ -3915,13 +3908,6 @@ border
 :
 2px
 inset
-;
-}
-noframes
-{
-display
-:
-none
 ;
 }
 spacer
@@ -4001,19 +3987,92 @@ none
 *
 hidden
 elements
+:
+https
+:
+/
+/
+html
+.
+spec
+.
+whatwg
+.
+org
+/
+#
+hidden
+-
+elements
+*
+*
+Exceptions
+:
+*
+*
+*
+area
+declaration
+needs
+to
+be
+!
+important
+see
+below
+/
+bug
+135040
+.
+That
+'
+s
+*
+hacky
+and
+broken
+.
+*
+*
+*
+[
+hidden
+]
+is
+implemented
+as
+a
+presentation
+attribute
+to
+avoid
+a
+global
+*
+selector
+in
+a
+UA
+sheet
+.
 *
 /
 base
 basefont
 datalist
 head
+link
 meta
-script
-style
-title
 noembed
+noframes
 param
+rp
+script
+source
+style
 template
+track
+title
 {
 display
 :
@@ -4999,13 +5058,6 @@ white
 space
 :
 nowrap
-;
-}
-rp
-{
-display
-:
-none
 ;
 }
 rt
