Bug 1720880 - Consolidate a bit bookmarks popup styles. r=dao
Unify shared declarations, and avoid unneeded [placespopup=true], since
there's no element that matches:

  :is(#BMB_bookmarksPopup, #PlacesToolbar) menupopup:not([placespopup])

Depends on D120080

Differential Revision: https://phabricator.services.mozilla.com/D120197

UltraBlame original commit: ef58d79c5818de22061579f81a3e7fa6767d16ca

--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -2382,6 +2382,65 @@ standaloneSubviewWidth
 BMB_bookmarksPopup
 menupopup
 {
+appearance
+:
+none
+;
+background
+-
+color
+:
+transparent
+;
+-
+-
+panel
+-
+background
+:
+var
+(
+-
+-
+arrowpanel
+-
+background
+)
+;
+-
+-
+panel
+-
+color
+:
+var
+(
+-
+-
+arrowpanel
+-
+color
+)
+;
+-
+-
+panel
+-
+border
+-
+color
+:
+var
+(
+-
+-
+arrowpanel
+-
+border
+-
+color
+)
+;
 -
 -
 panel
