Bug 1718755 - Fix the SpecialPowers pref code to deal with ui / font prefs correctly after the previous change. r=kmag
This allows us to remove the timeout (which was there for these prefs)
and makes the code a bit more explicit.

Unconditionally making all tests wait for rAF causes some timing changes
which cause some tests to time out / fail, see:

  https://treeherder.mozilla.org/jobs?repo=try&revision=3aef4c168c6ab7d762dd360f49d4f56dff686c03

So this only does it when changing the prefs that care about it. Fix
some tests that were relying on the timeout to get this green.

Differential Revision: https://phabricator.services.mozilla.com/D119040

UltraBlame original commit: 92e9abe2b2ad6eb513e806acd411470f4a767040

--- a/layout/base/tests/test_after_paint_pref.html
+++ b/layout/base/tests/test_after_paint_pref.html
@@ -530,6 +530,7 @@ blue
 "
 ;
 }
+async
 function
 step2
 (
@@ -651,6 +652,7 @@ a
 zero
 timeout
 .
+await
 SpecialPowers
 .
 pushPrefEnv
@@ -671,18 +673,21 @@ false
 ]
 ]
 }
-function
-(
 )
-{
+;
+await
+SpecialPowers
+.
+promiseTimeout
+(
+0
+)
+;
 setTimeout
 (
 step3
 0
 timeout
-)
-;
-}
 )
 ;
 }
