Bug 1710629 - Adjust bookmarks menu button panel padding r=mak
Modified bookmarks menu button panel padding in Windows and Linux to match the appearance of that panel in MacOS.

Differential Revision: https://phabricator.services.mozilla.com/D119643

UltraBlame original commit: 0c51eaf636b089097500fc721b31d99dcd92b0a3

--- a/browser/themes/osx/customizableui/panelUI.css
+++ b/browser/themes/osx/customizableui/panelUI.css
@@ -569,6 +569,48 @@ display
 none
 ;
 }
+#
+BMB_bookmarksPopup
+.
+subviewbutton
+>
+.
+menu
+-
+iconic
+-
+left
+{
+margin
+-
+inline
+-
+end
+:
+3px
+;
+}
+#
+BMB_bookmarksPopup
+.
+subviewbutton
+>
+.
+menu
+-
+iconic
+-
+text
+{
+padding
+-
+inline
+-
+start
+:
+0
+;
+}
 /
 *
 Override
