--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -8584,6 +8584,17 @@ block
 ;
 }
 #
+BMB_bookmarksPopup
+.
+subviewbutton
+>
+.
+menu
+-
+iconic
+-
+text
+#
 PlacesToolbar
 menu
 >
@@ -10995,27 +11006,6 @@ true
 color
 :
 inherit
-;
-}
-#
-BMB_bookmarksPopup
-.
-subviewbutton
->
-.
-menu
--
-iconic
--
-left
-{
-margin
--
-inline
--
-end
-:
-3px
 ;
 }
 /
