Bug 1715499 - Display special dialogue for single base domain r=pbz,fluent-reviewers,preferences-reviewers,flod,Gijs,jaws
Differential Revision: https://phabricator.services.mozilla.com/D118729

UltraBlame original commit: c86c80b3f9ae89c163cc8fde3127bf32e17085bd

--- a/browser/components/preferences/dialogs/siteDataRemoveSelected.xhtml
+++ b/browser/components/preferences/dialogs/siteDataRemoveSelected.xhtml
@@ -440,6 +440,13 @@ hbox
 >
 <
 separator
+class
+=
+"
+multi
+-
+site
+"
 /
 >
 <
@@ -459,6 +466,13 @@ removing
 -
 table
 "
+class
+=
+"
+multi
+-
+site
+"
 /
 >
 <
@@ -467,6 +481,9 @@ class
 =
 "
 thin
+multi
+-
+site
 "
 /
 >
@@ -483,6 +500,9 @@ class
 theme
 -
 listbox
+multi
+-
+site
 "
 flex
 =
