--- a/browser/themes/shared/preferences/siteDataSettings.css
+++ b/browser/themes/shared/preferences/siteDataSettings.css
@@ -166,15 +166,57 @@ selected
 #
 SiteDataRemoveSelectedDialog
 {
+padding
+:
+16px
+;
+width
+:
+50px
+;
+}
+#
+SiteDataRemoveSelectedDialog
+.
+single
+-
+entry
+{
+min
+-
+height
+:
+8em
+;
+}
+#
+SiteDataRemoveSelectedDialog
+.
+single
+-
+entry
+.
+multi
+-
+site
+{
+display
+:
+none
+;
+}
+#
+SiteDataRemoveSelectedDialog
+.
+multi
+-
+entry
+{
 min
 -
 height
 :
 36em
-;
-padding
-:
-16px
 ;
 }
 #
