Bug 1711261 - Increase toolbar contrast in Mac HCM. r=mstange,desktop-theme-reviewers,dao
This patch draws a 1px black line around the Urlbar in macOS HCM, which resembles other high contrast macOS apps. This patch only supports Light HCM mode. Since we apply the Firefox Dark lwttheme when in Dark mode, and we do not support lightweight themes in high contrast mode, significantly more work is required to implement basic support for dark HCM on Mac.

Differential Revision: https://phabricator.services.mozilla.com/D116406

UltraBlame original commit: 0a565118c5819a0f8c2d4efd1ab51e94ad21a53a

--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -1305,45 +1305,15 @@ size
 ;
 }
 }
-#
-urlbar
 :
-not
-(
-:
--
-moz
--
-lwtheme
-[
-focused
-=
-"
-true
-"
-]
-)
->
-#
-urlbar
--
-background
-#
-searchbar
-:
-not
-(
-:
--
-moz
--
-lwtheme
-:
-focus
--
-within
-)
+root
 {
+-
+-
+toolbar
+-
+field
+-
 border
 -
 color
