--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -118,8 +118,10 @@ lwt
 -
 bgcolor
 :
-#
-f9f9fb
+-
+moz
+-
+dialog
 ;
 -
 -
@@ -131,8 +133,10 @@ lwt
 -
 textcolor
 :
-#
-0c0c0d
+-
+moz
+-
+dialogtext
 ;
 -
 -
@@ -345,9 +349,39 @@ background
 -
 color
 :
+window
+;
+}
+media
+not
+(
+prefers
+-
+contrast
+)
+{
+#
+navigator
+-
+toolbox
+:
+not
+(
+:
+-
+moz
+-
+lwtheme
+)
+{
+background
+-
+color
+:
 #
 f0f0f4
 ;
+}
 }
 /
 *
@@ -1500,6 +1534,100 @@ field
 focus
 )
 ;
+}
+}
+media
+(
+prefers
+-
+contrast
+)
+{
+/
+*
+The
+"
+increase
+contrast
+"
+preference
+on
+macOS
+draws
+a
+1px
+black
+line
+around
+panels
+including
+the
+separate
+search
+bar
+.
+Since
+the
+Urlbar
+is
+not
+implemented
+as
+a
+panel
+it
+does
+not
+get
+this
+outline
+.
+This
+outline
+rule
+resembles
+the
+system
+outline
+bringing
+the
+Urlbar
+in
+line
+with
+panels
+and
+other
+Mac
+apps
+.
+*
+/
+#
+urlbar
+[
+open
+]
+>
+#
+urlbar
+-
+background
+{
+outline
+:
+1px
+solid
+var
+(
+-
+-
+focus
+-
+outline
+-
+color
+)
 }
 }
 #
