--- a/browser/themes/shared/urlbar-searchbar.inc.css
+++ b/browser/themes/shared/urlbar-searchbar.inc.css
@@ -173,6 +173,18 @@ toolbar
 -
 field
 -
+border
+-
+color
+:
+transparent
+;
+-
+-
+toolbar
+-
+field
+-
 focus
 -
 border
@@ -351,12 +363,6 @@ border
 -
 radius
 )
-;
-border
--
-color
-:
-transparent
 ;
 }
 #
