Bug 1708428 - Apply Proton styling to the edit bookmark panel's New Folder button. r=desktop-theme-reviewers,harry
These styles were copied from the popupnotification's `.panel-footer > button`
CSS, with a couple of adjustments which have comments here, and skipping over
the disabled styles because this button is never disabled.

Differential Revision: https://phabricator.services.mozilla.com/D119338

UltraBlame original commit: 7d4b78379fda9d943aada952986a4f5d615b4b07

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -2065,13 +2065,6 @@ color
 inherit
 ;
 border
--
-radius
-:
-0
-2px
-;
-border
 :
 1px
 solid
@@ -2085,6 +2078,15 @@ separator
 -
 color
 )
+;
+border
+-
+radius
+:
+0
+0
+2px
+2px
 ;
 margin
 :
@@ -2142,6 +2144,12 @@ opacity
 border
 :
 none
+;
+border
+-
+radius
+:
+0
 ;
 padding
 :
@@ -2532,9 +2540,9 @@ none
 ;
 border
 -
-bottom
+end
 -
-left
+start
 -
 radius
 :
@@ -2542,9 +2550,9 @@ radius
 ;
 border
 -
-bottom
+end
 -
-right
+end
 -
 radius
 :
