Bug 1720758 - Remove browser.aboutwelcome.protonDesign pref and pre-MR1 multistage onboarding r=Mardak
Cleanup pre-MR1 new user onboarding experience  by
 - removing browser.aboutwelcome.protonDesign pref
 - removing pre-MR1 multistage screen
 - removing pre-MR1 AboutWelcomeDefault content
 - fix respective tests

Differential Revision: https://phabricator.services.mozilla.com/D120038

UltraBlame original commit: c2cb820e5a69a77892d5215dcdffed962935a1cb

--- a/browser/components/newtab/aboutwelcome/content/aboutwelcome.html
+++ b/browser/components/newtab/aboutwelcome/content/aboutwelcome.html
@@ -216,6 +216,33 @@ chrome
 :
 /
 /
+global
+/
+skin
+/
+in
+-
+content
+/
+common
+.
+css
+"
+>
+<
+link
+rel
+=
+"
+stylesheet
+"
+href
+=
+"
+chrome
+:
+/
+/
 activity
 -
 stream
