Bug 1663475 - Paint caret geometry from the containing block. r=mats
This matches other browsers and shouldn't be too terrible, though I'm
not quite a fan of it.

Differential Revision: https://phabricator.services.mozilla.com/D89483

UltraBlame original commit: ccc6e271d9dbd7bbb3b0c640ff267cb6120322a9

--- a/layout/base/tests/test_reftests_with_caret.html
+++ b/layout/base/tests/test_reftests_with_caret.html
@@ -4139,6 +4139,42 @@ ref
 html
 '
 ]
+[
+'
+bug1663475
+-
+1
+.
+html
+'
+'
+bug1663475
+-
+1
+-
+ref
+.
+html
+'
+]
+[
+'
+bug1663475
+-
+2
+.
+html
+'
+'
+bug1663475
+-
+2
+-
+ref
+.
+html
+'
+]
 /
 /
 shift
