Bug 1717873 - Move link color styles to ua.css. r=morgan
We expose these via CSS system colors, so this way we don't need to
rebuild the preference sheet when the link color is different.

Differential Revision: https://phabricator.services.mozilla.com/D120677

UltraBlame original commit: 68b2122a86a96e8a4e5f7525f55e2db945023129

--- a/layout/style/res/ua.css
+++ b/layout/style/res/ua.css
@@ -1109,6 +1109,34 @@ pointer
 ;
 }
 :
+link
+{
+color
+:
+LinkText
+;
+}
+:
+any
+-
+link
+:
+active
+{
+color
+:
+ActiveText
+;
+}
+:
+visited
+{
+color
+:
+VisitedText
+;
+}
+:
 focus
 -
 visible
