--- a/browser/components/places/metadataViewer/interactionsViewer.html
+++ b/browser/components/places/metadataViewer/interactionsViewer.html
@@ -380,6 +380,41 @@ div
 class
 =
 "
+category
+"
+value
+=
+"
+places
+-
+stats
+"
+>
+<
+span
+class
+=
+"
+category
+-
+name
+"
+>
+Places
+Stats
+<
+/
+span
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
 export
 -
 button
