--- a/toolkit/components/pdfjs/content/web/viewer.css
+++ b/toolkit/components/pdfjs/content/web/viewer.css
@@ -1532,6 +1532,29 @@ none
 }
 .
 xfaLayer
+svg
+{
+pointer
+-
+events
+:
+none
+;
+}
+.
+xfaLayer
+svg
+*
+{
+pointer
+-
+events
+:
+none
+;
+}
+.
+xfaLayer
 a
 {
 color
