Bug 1721816 - force font: Menu on bookmarks toolbar menubutton menus as well as folders on the bookmarks toolbar to avoid -moz-pull-down-menu from menu.css on macOS making a difference on some macOS versions, r=emalysz
Differential Revision: https://phabricator.services.mozilla.com/D120896

UltraBlame original commit: 9caeb031968ec3a3ab5435e4889eb981e10deaab

--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -1752,6 +1752,9 @@ grayscale
 )
 ;
 }
+#
+BMB_bookmarksPopup
+menupopup
 .
 cui
 -
@@ -2500,6 +2503,10 @@ arrowpanel
 -
 background
 )
+;
+font
+:
+menu
 ;
 }
 #
