Bug 1721881 - Use pushPrefEnv in test_selection_underline.html. r=hiro
Differential Revision: https://phabricator.services.mozilla.com/D120865

UltraBlame original commit: 7dfa7f220211c74c4ae2e5791202223ea371d1d0

--- a/layout/generic/test/test_selection_underline.html
+++ b/layout/generic/test/test_selection_underline.html
@@ -303,385 +303,205 @@ var
 gPrefs
 =
 [
-{
-name
-:
+[
 "
 ui
 .
 SpellCheckerUnderline
 "
-type
-:
-"
-char
-"
-newValue
-:
 "
 #
 ff0000
 "
-}
-{
-name
-:
+]
+[
 "
 ui
 .
 IMERawInputBackground
 "
-type
-:
-"
-char
-"
-newValue
-:
 "
 transparent
 "
-}
-{
-name
-:
+]
+[
 "
 ui
 .
 IMERawInputForeground
 "
-type
-:
-"
-char
-"
-newValue
-:
 "
 #
 000000
 "
-}
-{
-name
-:
+]
+[
 "
 ui
 .
 IMERawInputUnderline
 "
-type
-:
-"
-char
-"
-newValue
-:
 "
 #
 00ff00
 "
-}
-{
-name
-:
+]
+[
 "
 ui
 .
 IMESelectedRawTextBackground
 "
-type
-:
-"
-char
-"
-newValue
-:
 "
 transparent
 "
-}
-{
-name
-:
+]
+[
 "
 ui
 .
 IMESelectedRawTextForeground
 "
-type
-:
-"
-char
-"
-newValue
-:
 "
 #
 000000
 "
-}
-{
-name
-:
+]
+[
 "
 ui
 .
 IMESelectedRawTextUnderline
 "
-type
-:
-"
-char
-"
-newValue
-:
 "
 #
 0000ff
 "
-}
-{
-name
-:
+]
+[
 "
 ui
 .
 IMEConvertedTextBackground
 "
-type
-:
-"
-char
-"
-newValue
-:
 "
 transparent
 "
-}
-{
-name
-:
+]
+[
 "
 ui
 .
 IMEConvertedTextForeground
 "
-type
-:
-"
-char
-"
-newValue
-:
 "
 #
 000000
 "
-}
-{
-name
-:
+]
+[
 "
 ui
 .
 IMEConvertedTextUnderline
 "
-type
-:
-"
-char
-"
-newValue
-:
 "
 #
 ffff00
 "
-}
-{
-name
-:
+]
+[
 "
 ui
 .
 IMESelectedConvertedTextBackground
 "
-type
-:
-"
-char
-"
-newValue
-:
 "
 transparent
 "
-}
-{
-name
-:
+]
+[
 "
 ui
 .
 IMESelectedConvertedTextForeground
 "
-type
-:
-"
-char
-"
-newValue
-:
 "
 #
 000000
 "
-}
-{
-name
-:
+]
+[
 "
 ui
 .
 IMESelectedConvertedTextUnderline
 "
-type
-:
-"
-char
-"
-newValue
-:
 "
 #
 00ffff
 "
-}
-{
-name
-:
+]
+[
 "
 ui
 .
 SpellCheckerUnderlineStyle
 "
-type
-:
-"
-int
-"
-newValue
-:
 0
-}
-{
-name
-:
+]
+[
 "
 ui
 .
 IMERawInputUnderlineStyle
 "
-type
-:
-"
-int
-"
-newValue
-:
 0
-}
-{
-name
-:
+]
+[
 "
 ui
 .
 IMESelectedRawTextUnderlineStyle
 "
-type
-:
-"
-int
-"
-newValue
-:
 0
-}
-{
-name
-:
+]
+[
 "
 ui
 .
 IMEConvertedTextUnderlineStyle
 "
-type
-:
-"
-int
-"
-newValue
-:
 0
-}
-{
-name
-:
+]
+[
 "
 ui
 .
 IMESelectedConvertedTextUnderlineStyle
 "
-type
-:
-"
-int
-"
-newValue
-:
 0
-}
-{
-name
-:
+]
+[
 "
 ui
 .
 SpellCheckerUnderlineRelativeSize
 "
-type
-:
-"
-float
-"
-newValue
-:
 1
 .
 0
-}
-{
-name
-:
+]
+[
 "
 ui
 .
 IMEUnderlineRelativeSize
 "
-type
-:
-"
-float
-"
-newValue
-:
 1
 .
 0
-}
+]
 ]
 ;
 const
@@ -1194,11 +1014,18 @@ return
 null
 ;
 }
+async
 function
 run
 (
 )
 {
+let
+prefs
+=
+[
+]
+;
 if
 (
 +
@@ -1241,10 +1068,6 @@ finish
 (
 )
 ;
-cleanup
-(
-)
-;
 return
 ;
 }
@@ -1257,10 +1080,11 @@ gSelectionIndex
 =
 0
 ;
-SpecialPowers
+prefs
 .
-setIntPref
+push
 (
+[
 "
 font
 .
@@ -1278,6 +1102,7 @@ gFontIndex
 ]
 .
 defaultSize
+]
 )
 ;
 }
@@ -1305,10 +1130,11 @@ gSelectionIndex
 ]
 }
 ;
-SpecialPowers
+prefs
 .
-setIntPref
+push
 (
+[
 "
 ui
 .
@@ -1321,12 +1147,8 @@ decoration
 relativeSize
 *
 100
-)
-;
-SpecialPowers
-.
-setIntPref
-(
+]
+[
 "
 ui
 .
@@ -1339,12 +1161,8 @@ decoration
 relativeSize
 *
 100
-)
-;
-SpecialPowers
-.
-setIntPref
-(
+]
+[
 "
 ui
 .
@@ -1355,12 +1173,8 @@ test
 decoration
 .
 style
-)
-;
-SpecialPowers
-.
-setIntPref
-(
+]
+[
 "
 ui
 .
@@ -1371,12 +1185,8 @@ test
 decoration
 .
 style
-)
-;
-SpecialPowers
-.
-setIntPref
-(
+]
+[
 "
 ui
 .
@@ -1387,12 +1197,8 @@ test
 decoration
 .
 style
-)
-;
-SpecialPowers
-.
-setIntPref
-(
+]
+[
 "
 ui
 .
@@ -1403,12 +1209,8 @@ test
 decoration
 .
 style
-)
-;
-SpecialPowers
-.
-setIntPref
-(
+]
+[
 "
 ui
 .
@@ -1419,22 +1221,24 @@ test
 decoration
 .
 style
+]
 )
 ;
-SimpleTest
+await
+SpecialPowers
 .
-executeSoon
+pushPrefEnv
 (
-function
-(
-)
 {
+set
+:
+prefs
+}
+)
+;
 doTest
 (
 test
-)
-;
-}
 )
 ;
 }
@@ -1746,136 +1550,24 @@ callbackTestCanvas
 )
 ;
 }
+async
 function
 onLoad
 (
 )
 {
-for
-(
-var
-i
-=
-0
-;
-i
-<
-gPrefs
-.
-length
-;
-i
-+
-+
-)
-{
-if
-(
-gPrefs
-[
-i
-]
-.
-type
-=
-=
-"
-char
-"
-)
-{
+await
 SpecialPowers
 .
-setCharPref
+pushPrefEnv
 (
-gPrefs
-[
-i
-]
-.
-name
-gPrefs
-[
-i
-]
-.
-newValue
-)
-;
-}
-else
-if
-(
-gPrefs
-[
-i
-]
-.
-type
-=
-=
-"
-int
-"
-)
 {
-SpecialPowers
-.
-setIntPref
-(
+set
+:
 gPrefs
-[
-i
-]
-.
-name
-gPrefs
-[
-i
-]
-.
-newValue
+}
 )
 ;
-}
-else
-if
-(
-gPrefs
-[
-i
-]
-.
-type
-=
-=
-"
-float
-"
-)
-{
-SpecialPowers
-.
-setIntPref
-(
-gPrefs
-[
-i
-]
-.
-name
-gPrefs
-[
-i
-]
-.
-newValue
-*
-100
-)
-;
-}
-}
 var
 iframe
 =
@@ -1951,60 +1643,6 @@ run
 (
 )
 ;
-}
-function
-cleanup
-(
-)
-{
-SpecialPowers
-.
-clearUserPref
-(
-"
-font
-.
-size
-.
-variable
-.
-x
--
-western
-"
-)
-;
-for
-(
-var
-i
-=
-0
-;
-i
-<
-gPrefs
-.
-length
-;
-i
-+
-+
-)
-{
-SpecialPowers
-.
-clearUserPref
-(
-gPrefs
-[
-i
-]
-.
-name
-)
-;
-}
 }
 SimpleTest
 .
