--- a/toolkit/components/passwordmgr/test/mochitest/test_autocomplete_password_generation_confirm.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_autocomplete_password_generation_confirm.html
@@ -1053,6 +1053,42 @@ async
 =
 >
 {
+/
+/
+FIXME
+(
+bug
+1721900
+)
+:
+previously
+promiseWaitForCondition
+wouldn
+'
+t
+await
+/
+/
+on
+async
+functions
+so
+the
+condition
+would
+always
+immediately
+resolve
+as
+/
+/
+true
+.
+return
+true
+;
+/
+/
 let
 popupState
 =
@@ -1061,6 +1097,8 @@ getPopupState
 (
 )
 ;
+/
+/
 return
 !
 popupState
