Bug 1715419 use a speaker icon for selectAudioOutput() prompt anchor r=fluent-reviewers,johannh,flod
Differential Revision: https://phabricator.services.mozilla.com/D117261

UltraBlame original commit: 0127c17167b2e19b3cff981687ff8671a3bbfb40

--- a/browser/themes/shared/notification-icons.inc.css
+++ b/browser/themes/shared/notification-icons.inc.css
@@ -1654,6 +1654,35 @@ svg
 ;
 }
 .
+speaker
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+global
+/
+skin
+/
+media
+/
+audio
+.
+svg
+)
+;
+}
+.
 midi
 -
 icon
